<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginLeft="200dp">

        <TextView
            android:id="@+id/level"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:visibility="visible"
            android:text="Level 1"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="Points: 0"
            android:visibility="invisible"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>


    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="Quiz starten"
        android:visibility="visible" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:text="Hier kommt der Text der Frage hin"
        android:visibility="invisible" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/button_answer_one"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/colorAccent"
            android:text="Antwort1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_answer_two"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            android:text="Antwort2"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_answer_three"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Antwort3"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_answer_four"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="Antwort4"
            android:visibility="invisible" />

    </GridLayout>


    <Button
        android:id="@+id/endscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="testeeee"
        android:visibility="invisible"/>

 <!--   <Button
        android:id="@+id/button_answer_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Die Antwort war richtig"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_answer_false"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="Die Antwort war falsch"
        android:visibility="invisible" />
 -->
</LinearLayout>